--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Math"
+        android:hint="Hint"
         android:inputType="phone"
         android:textSize="20sp"
         android:id="@+id/edt_1"/>
